--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,8 @@ h1 {
     font-family: "Roboto";
     font-size: 50px;
     text-align: center;
-    padding: 20px;
-    margin: 0px 400px;
+    padding: 10px;
+    margin: 0px 200px;
     background: rgb(2,0,36);
     background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,0,0,1) 100%);
     color: white;
@@ -21,15 +21,14 @@ p {
  text-align: center;
  font-family: "Roboto";
  font-size: 20px;
- border-bottom: 2px solid ;
- border-color: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,0,0,1) 100%);
  padding-bottom: 40px;
- padding-top: 20px;
- margin: 0px 400px;
+ padding-top: 40px;
+ margin: 0px 300px;
+ border-bottom: 2px solid blue;
 }
 
 form {
-    width: 35vw;
+    width: 50vw;
     min-height: 500px;
     min-width: 300px;
     margin: 0 auto;
@@ -54,3 +53,20 @@ label {
     display: block;
    min-height: 60px;
   }
+
+.terms {
+    display: inline-block;
+    width: unset;
+    text-align: left;
+}
+
+.submit {
+   margin: auto;
+max-width: 100px;
+vertical-align: middle;
+}
+
+.picture, .reason {
+    margin: auto;
+    display: block;
+}
